# couple-generator

./: README.md  pyproject.toml  test.csv
couple_generator/: cli.py
